[gd_scene load_steps=2 format=3 uid="uid://cp00s8o1elpxg"]

[ext_resource type="Script" path="res://gui/settings.gd" id="1_mdqsp"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdqsp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Refresh" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Refresh"

[node name="Clear" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Clear"

[node name="Apply" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Apply"

[connection signal="item_activated" from="VBoxContainer/Tree" to="." method="_on_tree_item_activated"]
[connection signal="item_edited" from="VBoxContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="pressed" from="VBoxContainer/Buttons/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Apply" to="." method="_on_apply_pressed"]
